--- a/index.html
+++ b/index.html
@@ -275,16 +275,14 @@
     <section class="hero">
       <div class="wrap grid cols-2">
         <div>
-          <span class="badge">Conteúdo informativo — em conformidade com o Provimento 205/2021 da OAB</span>
+          <!-- Badge removida conforme solicitação -->
           <h1 class="title">Aposentadoria por invalidez no INSS em 2025</h1>
           <p class="subtitle">Saiba quem tem direito, carência, cálculo, documentos e como solicitar pelo Meu INSS. Linguagem clara, orientação jurídica responsável e sem promessas de resultado.</p>
           <div class="actions">
-            <a class="btn btn-primary" href="#contato">Solicitar avaliação</a>
+            <a class="btn btn-primary" href="#contato">Fale com um especialista</a>
             <a class="btn btn-ghost" href="https://www.marinhomendes.adv.br/blog/aposentadoria-por-invalidez/" target="_blank" rel="noopener">Ler matéria no blog</a>
           </div>
-          <div class="card" style="margin-top:16px;border-left:4px solid #10b981;padding:14px 16px">
-            <strong>Transparência:</strong> atendimento técnico e ético; honorários definidos em contrato; sem garantia de êxito.
-          </div>
+          <!-- Card de Transparência removido conforme solicitação -->
         </div>
         <div class="img-ph img-hero" aria-label="Imagem representativa">
           <img src="img/elderly-981400_1280.jpg" alt="Imagem hero aposentadoria por invalidez"
@@ -341,7 +339,6 @@
         <p class="muted">Conforme listagens normativas, comprovadas por laudos e exames atualizados com CID:</p>
         <div class="grid cols-4">
           <div class="card reveal"><strong>Tuberculose ativa</strong></div>
-          <div class="card reveal"><strong>Hanseníase</strong></div>
           <div class="card reveal"><strong>Neoplasia maligna (câncer)</strong></div>
           <div class="card reveal"><strong>Cegueira</strong></div>
           <div class="card reveal"><strong>Paralisia irreversível e incapacitante</strong></div>
@@ -421,37 +418,24 @@
           <div class="card reveal"><h3>Acompanhe no Meu INSS</h3><p>Monitore o status e recorra se necessário.</p></div>
         </div>
         <div class="cta reveal" style="margin-top:18px">
-          <div><h3 style="margin:0">Precisa de orientação jurídica responsável?</h3><p class="muted" style="margin:6px 0 0">Analisamos seu caso com prudência e transparência.</p></div>
+          <div><h3 style="margin:0">Ficou com dúvidas? Fale conosco.</h3></div>
           <a class="btn btn-primary" href="#contato">Falar com o escritório</a>
-        </div>
-      </div>
-    </section>
-
-    <section id="faq">
-      <div class="wrap">
-        <h2 class="section-title">FAQ – Perguntas frequentes</h2>
-        <div class="grid">
-          <details class="reveal"><summary>1) Quem tem direito em 2025?</summary><p>Qualidade de segurado; carência de 12 contribuições (salvo exceções); incapacidade total e permanente atestada em perícia.</p></details>
-          <details class="reveal"><summary>2) Quais doenças dispensam carência?</summary><p>Câncer, AIDS, tuberculose ativa, paralisia irreversível, esclerose múltipla, cardiopatia grave, Parkinson e cegueira, dentre outras previstas.</p></details>
-          <details class="reveal"><summary>3) Como faço o pedido?</summary><p>Pelo Meu INSS: <em>Agendar Perícia → Aposentadoria por Incapacidade Permanente</em>. Anexe a documentação médica.</p></details>
-          <details class="reveal"><summary>4) O INSS pode cortar o benefício?</summary><p>Sim, se houver recuperação da capacidade na reavaliação. Isenções conforme idade/tempo de benefício.</p></details>
         </div>
       </div>
     </section>
 
     <section id="leia">
       <div class="wrap">
-        <h2 class="section-title">Leia também</h2>
+        <h2 class="section-title">Blogs de referência</h2>
         <div class="grid cols-3">
-          <a class="card reveal" href="https://www.marinhomendes.adv.br/blog/aposentadoria-por-invalidez/" target="_blank" rel="noopener"><h3>Aposentadoria por Invalidez</h3><p class="muted">Análise completa em nosso blog.</p></a>
-          <a class="card reveal" href="https://www.marinhomendes.adv.br/blog/auxilio-doenca-2025/" target="_blank" rel="noopener"><h3>Auxílio-doença em 2025</h3><p class="muted">Regras e mudanças no benefício.</p></a>
-          <a class="card reveal" href="https://www.marinhomendes.adv.br/blog/direito-previdenciario/" target="_blank" rel="noopener"><h3>Direito previdenciário</h3><p class="muted">Quais benefícios você pode solicitar?</p></a>
+          <a class="card reveal" href="https://www.marinhomendes.adv.br/blog/direito-previdenciario/" target="_blank" rel="noopener"><h3>Direito Previdenciário</h3><p class="muted">Visão geral e conteúdos sobre benefícios.</p></a>
+          <a class="card reveal" href="https://www.marinhomendes.adv.br/blog/aposentadoria-por-invalidez/" target="_blank" rel="noopener"><h3>Aposentadoria por Invalidez</h3><p class="muted">Análise completa no blog.</p></a>
         </div>
       </div>
     </section>
 
     <section id="contato">
-      <div class="wrap grid cols-2">
+      <div class="wrap" style="max-width:760px;margin:0 auto;">
         <div class="card reveal">
           <h2 class="section-title">Entre em contato</h2>
           <form class="grid" id="leadForm" novalidate>
@@ -470,18 +454,41 @@
             </div>
             <div class="control"><label for="msg">Mensagem</label><textarea id="msg" name="mensagem" placeholder="Conte brevemente sua situação"></textarea></div>
             <label class="policy"><input id="consent" type="checkbox" required aria-required="true"/><span>Li e concordo com a <a href="#">Política de Privacidade</a> e autorizo o contato para fins exclusivamente profissionais.</span></label>
-            <div class="row" style="gap:10px"><button class="btn btn-primary" type="submit">Enviar mensagem</button><a class="btn btn-ghost" href="https://wa.me/5519974100605" target="_blank" rel="noopener">Falar no WhatsApp</a></div>
-            <small class="muted">Atendimento: 08:30–18:00 (dias úteis). Telefone: <a href="tel:+551938454946">(19) 3845-4946</a> • E-mail: <a href="mailto:adm@marinhomendes.adv.br">adm@marinhomendes.adv.br</a> • Site: <a href="https://www.marinhomendes.adv.br/" target="_blank">marinhomendes.adv.br</a></small>
+            <div class="row" style="gap:10px;justify-content:center"><button class="btn btn-primary" type="submit">Enviar mensagem</button><a class="btn btn-ghost" href="https://wa.me/5519974100605" target="_blank" rel="noopener">Falar no WhatsApp</a></div>
+            <small class="muted" style="display:block;text-align:center">Atendimento: 08:30–18:00 (dias úteis). Telefone: <a href="tel:+551938454946">(19) 3845-4946</a> • E-mail: <a href="mailto:adm@marinhomendes.adv.br">adm@marinhomendes.adv.br</a> • Site: <a href="https://www.marinhomendes.adv.br/" target="_blank">marinhomendes.adv.br</a></small>
           </form>
-        </div>
-        <aside class="card reveal" aria-label="Canais e redes">
-          <h3>Redes sociais</h3>
-          <div class="row" style="gap:10px">
+          <!-- Redes sociais movidas para abaixo do formulário -->
+          <div class="row" style="gap:10px;justify-content:center;margin-top:14px">
             <a class="btn btn-ghost" style="padding:10px 12px" href="https://www.facebook.com/marinhomendesadv" target="_blank" rel="noopener" aria-label="Facebook">Facebook</a>
             <a class="btn btn-ghost" style="padding:10px 12px" href="https://www.instagram.com/marinhomendesadv" target="_blank" rel="noopener" aria-label="Instagram">Instagram</a>
             <a class="btn btn-ghost" style="padding:10px 12px" href="https://www.linkedin.com/company/marinho-mendes/" target="_blank" rel="noopener" aria-label="LinkedIn">LinkedIn</a>
           </div>
-        </aside>
+        </div>
+      </div>
+    </section>
+
+    <!-- ===== Destaque endereços ===== -->
+    <section id="escritorios">
+      <div class="wrap">
+        <h2 class="section-title">Nossos escritórios</h2>
+        <div class="grid cols-2">
+          <div class="card reveal">
+            <h3 style="margin-top:0">Campinas</h3>
+            <address style="font-style:normal;line-height:1.7">
+              Av. Jose Rocha Bonfim, nº 214 — Bloco J, Sala 228 — Edifício Milao, Praça Capital, Loteamento Center Santa Genebra<br/>
+              Campinas – São Paulo — CEP 13080-650<br/>
+              Fone: <a href="tel:+551932090417">(19) 3209-0417</a>
+            </address>
+          </div>
+          <div class="card reveal">
+            <h3 style="margin-top:0">Hortolândia</h3>
+            <address style="font-style:normal;line-height:1.7">
+              Rua Antônio Nelson Barbosa, nº 93 — Bairro Jardim do Bosque<br/>
+              Hortolândia – São Paulo — CEP 13186-231<br/>
+              Fone: <a href="tel:+551938454946">(19) 3845-4946</a>
+            </address>
+          </div>
+        </div>
       </div>
     </section>
   </main>
@@ -500,6 +507,7 @@
             <li><a href="#passo">Passo a passo</a></li>
             <li><a href="#doencas">Doenças</a></li>
             <li><a href="#contato">Contato</a></li>
+            <li><a href="#escritorios">Nossos escritórios</a></li>
           </ul>
         </div>
         <div>
