--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
     }
     *{box-sizing:border-box}
     html{scroll-behavior:smooth; scroll-padding-top: calc(var(--header-h) + 12px);}
+    html, body{max-width:100%; overflow-x: clip;}
     body{margin:0;font-family:Inter,system-ui,Segoe UI,Arial,sans-serif;line-height:1.65;color:var(--ink);background:linear-gradient(180deg,#f3f6ff 0%, #f6f8fc 40%, #ffffff 100%)}
     a{color:var(--brand);text-decoration:none}
     img{max-width:100%;display:block;height:auto}
     :focus-visible{outline:3px solid rgba(61,123,246,.5); outline-offset:2px}
 
     .wrap{max-width:var(--wrap);margin:0 auto;padding:0 var(--space)}
-    .row{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap}
-    .grid{display:grid;gap:32px}
+    .row{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap;min-width:0}
+    .grid{display:grid;gap:32px;min-width:0}
     .cols-2{grid-template-columns:1fr 1fr}
     .cols-3{grid-template-columns:repeat(3,minmax(0,1fr))}
     .cols-4{grid-template-columns:repeat(4,minmax(0,1fr))}
@@ -75,16 +76,19 @@
     .btn-primary{background:linear-gradient(135deg,var(--primary),var(--primary-2));color:#fff;box-shadow:0 10px 24px rgba(63,122,246,.22)}
     .btn-ghost{background:#fff;border-color:var(--line);color:#2a3b67}
 
-    /* ===== MOBILE HEADER (apenas hambúrguer; sem ícone do Whats) ===== */
+    /* ===== MOBILE HEADER (apenas hambúrguer; novo estilo do botão) ===== */
     .mobile-only{display:none}
     .hamb{
       display:none; align-items:center; justify-content:center;
-      width:44px;height:44px;border:1px solid var(--line); background:#fff; border-radius:12px;
-      transition:transform .15s ease, box-shadow .15s ease;
+      width:44px;height:44px;border:1px solid #dbe4ff; background:linear-gradient(180deg,#ffffff,#f4f7ff); border-radius:999px;
+      box-shadow:0 6px 16px rgba(22,34,66,.08);
+      transition:transform .15s ease, box-shadow .15s ease, background .2s ease, border-color .2s ease;
     }
+    .hamb:hover{box-shadow:0 8px 18px rgba(22,34,66,.12); border-color:#cdd9ff}
     .hamb:active{transform:translateY(1px)}
-    .hamb .bar{display:block;width:20px;height:2px;background:#1F2A44;border-radius:2px;transition:transform .25s ease,opacity .25s ease,width .25s ease}
-    .hamb .bar:nth-child(2){width:16px}
+    .hamb .bar{display:block;width:18px;height:2px;background:#1F2A44;border-radius:2px;transition:transform .25s ease,opacity .25s ease,width .25s ease}
+    .hamb .bar + .bar{margin-top:4px}
+    .hamb[aria-expanded="true"]{background:linear-gradient(180deg,#f2f6ff,#eef2ff)}
     .hamb[aria-expanded="true"] .bar:nth-child(1){transform:translateY(6px) rotate(45deg)}
     .hamb[aria-expanded="true"] .bar:nth-child(2){opacity:0}
     .hamb[aria-expanded="true"] .bar:nth-child(3){transform:translateY(-6px) rotate(-45deg)}
@@ -115,9 +119,13 @@
     .hero .cols-2{align-items:center}
     .hero .title{max-width:26ch}
     .img-ph{display:flex;align-items:center;justify-content:center}
-    .img-hero{aspect-ratio:16/9;border-radius:14px;overflow:hidden;box-shadow:var(--shadow)}
-    .img-hero img{width:100%;height:100%;object-fit:cover}
+    .img-hero{aspect-ratio:16/9;border-radius:14px;overflow:hidden;box-shadow:var(--shadow);margin-inline:auto}
+    .img-hero img{width:100%;height:100%;object-fit:cover;object-position:center}
     .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:18px}
+
+    /* Imagens padronizadas */
+    .img-rect,.img-wide,.img-hero{border-radius:14px;overflow:hidden;box-shadow:var(--shadow)}
+    .img-rect img,.img-wide img,.img-hero img{width:100%;height:100%;object-fit:cover;object-position:50% 50%}
 
     /* Cards / demais seções (mantidos) */
     .card{background:var(--surface);border:1px solid var(--line);border-radius:var(--radius);box-shadow:var(--shadow);padding:32px 24px 28px}
@@ -126,20 +134,22 @@
     details{border:1px solid var(--line);border-radius:12px;padding:14px 16px;background:#fff}
     details + details{margin-top:12px}
     summary{cursor:pointer;font-weight:800;color:#1f2a44}
+
+    /* ===== FORM ===== */
     form .row-2{display:grid;grid-template-columns:1fr 1fr;gap:12px}
     label{font-weight:700;color:#24345f;margin-bottom:6px;display:block}
     .control input,.control select,.control textarea{padding-left:16px}
     input, select{height:48px}
     input, textarea, select{
-    background:#fff;
-    border:1px solid var(--line);
-    border-radius:12px;
-    padding:12px 14px;
-    color: var(--ink);
-    outline:none;
-    transition: box-shadow .18s ease, border-color .18s ease;
-    font-size:16px;
-    width:100%;
+      background:#fff;
+      border:1px solid var(--line);
+      border-radius:12px;
+      padding:12px 14px;
+      color: var(--ink);
+      outline:none;
+      transition: box-shadow .18s ease, border-color .18s ease;
+      font-size:16px;
+      width:100%;
     }
     input:focus, textarea:focus, select:focus{border-color:var(--primary);box-shadow:0 0 0 4px rgba(99,132,255,.18)}
     textarea{min-height:130px;resize:vertical;padding-top:14px}
@@ -160,6 +170,11 @@
     .wa-float{position:fixed;right:18px;bottom:18px;z-index:60;display:inline-flex;align-items:center;justify-content:center;width:56px;height:56px;border-radius:999px;background:#25D366;box-shadow:0 10px 24px rgba(37,211,102,.35)}
     .wa-float svg{color:#fff}
 
+    /* Social (ícones) */
+    .social{display:flex;gap:10px;justify-content:center;margin-top:14px}
+    .btn-icon{width:44px;height:44px;padding:0;border-radius:12px;border:1px solid var(--line);background:#fff;display:inline-flex;align-items:center;justify-content:center}
+    .btn-icon svg{width:20px;height:20px}
+
     /* Reveal */
     .reveal{opacity:0;transform:translateY(18px);transition:opacity .6s ease, transform .6s ease}
     .reveal.in{opacity:1;transform:none}
@@ -178,7 +193,13 @@
       #documentos{padding-top:108px}
       .grid{gap:24px}
       .hero .wrap{padding:56px 16px 28px}
-      .img-hero{aspect-ratio:16/10;max-height:260px}
+      .img-hero{aspect-ratio:16/9;max-height:260px;margin-inline:auto}
+      /* Padroniza imagens em mobile */
+      .img-rect,.img-wide,.img-hero{aspect-ratio:16/9}
+      #doencas .img-wide img, 
+      section#documentos .img-ph img{
+        width:100% !important; max-width:100% !important; margin:0 auto;
+      }
     }
     @media (max-width:640px){
       :root{--header-h:56px}
@@ -186,13 +207,17 @@
       .hero .wrap{padding:24px 16px 16px}
       .hero .title{font-size: clamp(22px, 6.6vw, 30px)}
       .hero .subtitle{font-size:15px}
-      .img-hero{max-height: clamp(150px, 46vw, 220px)}
+      .img-hero{max-height: clamp(150px, 46vw, 220px); margin-inline:auto}
       /* MAIS ESPAÇO ENTRE OS BOTÕES NA HERO (mobile) */
       .actions{gap:20px;margin-top:20px}
       .actions .btn{width:100%}
       #calculo{padding-bottom:64px}
       #documentos{padding-top:84px}
       .grid{gap:16px}
+      /* Form 1 coluna no mobile */
+      form .row-2{grid-template-columns:1fr}
+      #contato .row .btn{width:100%}
+      .policy span{font-size:14px}
     }
     @media (prefers-reduced-motion: reduce){
       .reveal{opacity:1;transform:none;transition:none}
@@ -275,14 +300,12 @@
     <section class="hero">
       <div class="wrap grid cols-2">
         <div>
-          <!-- Badge removida conforme solicitação -->
           <h1 class="title">Aposentadoria por invalidez no INSS em 2025</h1>
           <p class="subtitle">Saiba quem tem direito, carência, cálculo, documentos e como solicitar pelo Meu INSS. Linguagem clara, orientação jurídica responsável e sem promessas de resultado.</p>
           <div class="actions">
             <a class="btn btn-primary" href="#contato">Fale com um especialista</a>
             <a class="btn btn-ghost" href="https://www.marinhomendes.adv.br/blog/aposentadoria-por-invalidez/" target="_blank" rel="noopener">Ler matéria no blog</a>
           </div>
-          <!-- Card de Transparência removido conforme solicitação -->
         </div>
         <div class="img-ph img-hero" aria-label="Imagem representativa">
           <img src="img/elderly-981400_1280.jpg" alt="Imagem hero aposentadoria por invalidez"
@@ -300,7 +323,7 @@
           <h2 class="section-title">O que é Aposentadoria por Invalidez?</h2>
           <p>A aposentadoria por invalidez — agora chamada oficialmente de <strong>aposentadoria por incapacidade permanente</strong> — é um benefício previdenciário concedido a trabalhadores que, por motivo de doença ou acidente, ficam <strong>permanentemente incapazes</strong> de exercer qualquer atividade profissional e não podem ser reabilitados para outra função.</p>
         </div>
-        <div class="img-ph reveal" style="aspect-ratio:4/3;border-radius:14px;overflow:hidden;box-shadow:var(--shadow)">
+        <div class="img-ph reveal img-rect">
           <img src="img/wheelchair-749985_1280.jpg" alt="Imagem ilustrativa benefício INSS" loading="lazy" decoding="async"/>
         </div>
       </div>
@@ -360,7 +383,7 @@
           <p><strong>Base:</strong> média de 100% das contribuições desde jul/1994; aplica-se <strong>60%</strong> + <strong>2%</strong> por ano que exceder 20 anos (homens) ou 15 anos (mulheres).<br><em>Mínimo:</em> R$ 1.518 • <em>Teto:</em> R$ 8.157,41.</p>
           <p><strong>Adicional de 25%</strong> quando houver necessidade permanente de assistência de terceiros.</p>
         </div>
-        <div class="img-ph img-rect reveal" style="border-radius:14px;overflow:hidden;box-shadow:var(--shadow)">
+        <div class="img-ph img-rect reveal">
           <img src="img/Captura de tela 2025-09-05 152308.png" alt="Infográfico cálculo do benefício" loading="lazy" decoding="async"/>
         </div>
       </div>
@@ -389,7 +412,7 @@
       </div>
       <div class="wrap" style="margin-top:18px">
         <div class="img-ph img-wide reveal" aria-label="Print Meu INSS">
-          <img src="img/Captura de tela 2025-09-05 152151.png" alt="Print Meu INSS" style="width:60%;max-width:700px;border-radius:14px;display:block;margin:0 auto"/>
+          <img src="img/Captura de tela 2025-09-05 152151.png" alt="Print Meu INSS"/>
         </div>
       </div>
     </section>
@@ -403,7 +426,7 @@
             <li>ou mais de 55 anos e benefício há mais de 15 anos.</li>
           </ul>
         </div>
-        <div class="img-ph img-rect reveal" style="border-radius:14px;overflow:hidden;box-shadow:var(--shadow)">
+        <div class="img-ph img-rect reveal">
           <img src="img/doctor-5835367_1280.jpg" alt="Imagem revisão perícia" loading="lazy" decoding="async"/>
         </div>
       </div>
@@ -457,11 +480,17 @@
             <div class="row" style="gap:10px;justify-content:center"><button class="btn btn-primary" type="submit">Enviar mensagem</button><a class="btn btn-ghost" href="https://wa.me/5519974100605" target="_blank" rel="noopener">Falar no WhatsApp</a></div>
             <small class="muted" style="display:block;text-align:center">Atendimento: 08:30–18:00 (dias úteis). Telefone: <a href="tel:+551938454946">(19) 3845-4946</a> • E-mail: <a href="mailto:adm@marinhomendes.adv.br">adm@marinhomendes.adv.br</a> • Site: <a href="https://www.marinhomendes.adv.br/" target="_blank">marinhomendes.adv.br</a></small>
           </form>
-          <!-- Redes sociais movidas para abaixo do formulário -->
-          <div class="row" style="gap:10px;justify-content:center;margin-top:14px">
-            <a class="btn btn-ghost" style="padding:10px 12px" href="https://www.facebook.com/marinhomendesadv" target="_blank" rel="noopener" aria-label="Facebook">Facebook</a>
-            <a class="btn btn-ghost" style="padding:10px 12px" href="https://www.instagram.com/marinhomendesadv" target="_blank" rel="noopener" aria-label="Instagram">Instagram</a>
-            <a class="btn btn-ghost" style="padding:10px 12px" href="https://www.linkedin.com/company/marinho-mendes/" target="_blank" rel="noopener" aria-label="LinkedIn">LinkedIn</a>
+          <!-- Redes sociais como ÍCONES -->
+          <div class="social" aria-label="Redes sociais">
+            <a class="btn-icon" href="https://www.facebook.com/marinhomendesadv" target="_blank" rel="noopener" aria-label="Facebook" title="Facebook">
+              <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M14.5 8.5H16V6h-1.5C12.6 6 12 7.2 12 8.7V10H10v2.5h2V18h2.5v-5.5H17V10h-2.5V8.9c0-.3.2-.4.5-.4Z" stroke="#1F2A44" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            </a>
+            <a class="btn-icon" href="https://www.instagram.com/marinhomendesadv" target="_blank" rel="noopener" aria-label="Instagram" title="Instagram">
+              <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><rect x="3" y="3" width="18" height="18" rx="5" stroke="#1F2A44" stroke-width="1.6"/><circle cx="12" cy="12" r="4" stroke="#1F2A44" stroke-width="1.6"/><circle cx="17.5" cy="6.5" r="1" fill="#1F2A44"/></svg>
+            </a>
+            <a class="btn-icon" href="https://www.linkedin.com/company/marinho-mendes/" target="_blank" rel="noopener" aria-label="LinkedIn" title="LinkedIn">
+              <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><rect x="3" y="3" width="18" height="18" rx="3" stroke="#1F2A44" stroke-width="1.6"/><path d="M7.5 10.5V17" stroke="#1F2A44" stroke-width="1.6" stroke-linecap="round"/><circle cx="7.5" cy="7.5" r="1.25" fill="#1F2A44"/><path d="M12 17v-3.8c0-1.1.9-2 2-2s2 .9 2 2V17" stroke="#1F2A44" stroke-width="1.6" stroke-linecap="round"/></svg>
+            </a>
           </div>
         </div>
       </div>
